Add Authenticator module

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>HeadManager</module>
 		<module>Notificator</module>
 		<module>UserManager</module>
+		<module>Authenticator</module>
 	</modules>
 
 	<properties>
