Add properties in discovery server

--- a/DiscoveryServer/src/main/resources/application.yml
+++ b/DiscoveryServer/src/main/resources/application.yml
@@ -1,3 +1,17 @@
 spring:
   application:
     name: DiscoveryServer
+
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8000/eureka
+
+logging:
+  pattern:
+    console: "%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n"
