Add client relation

--- a/Authenticator/src/main/resources/application.yml
+++ b/Authenticator/src/main/resources/application.yml
@@ -2,3 +2,14 @@ spring:
   application:
     name: Authenticator
 
+server:
+  port: 0
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8000/eureka
+
+logging:
+  pattern:
+    console: "%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n"
