--- a/HeadManager/src/main/resources/application.yml
+++ b/HeadManager/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 spring:
   application:
     name: HeadManager
+
+server:
+  port: 0
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8000/eureka
+
+logging:
+  pattern:
+    console: "%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n"
