--- a/Notificator/pom.xml
+++ b/Notificator/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
