Add API Gateway module

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>UserManager</module>
 		<module>Authenticator</module>
 		<module>DiscoveryServer</module>
+		<module>Gateway</module>
 	</modules>
 
 	<properties>
