--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -1,12 +1,39 @@
 spring:
   application:
-    name: Gateway
+    name: GATEWAY
   cloud:
     gateway:
+#      routes:
+#        - id: head-manager
+#          uri: lb://HEAD-MANAGER
+#          predicates:
+#            - Path=/head-manager/**
+#          filters:
+#            - AuthenticationFilter
+#
+#        - id: notificator
+#          uri: lb://NOTIFICATOR
+#          predicates:
+#            - Path=/notificator/**
+#          filters:
+#            - AuthenticationFilter
+#
+#        - id: authenticator
+#          uri: lb://AUTHENTICATOR
+#          predicates:
+#            - Path=/auth/**
+
+#        - id: user-manager
+#          uri: lb://USER-MANAGER
+#          predicates:
+#            - Path=/auth/**
       discovery:
         locator:
           enabled: true
-          lower-case-service-id: true
+#          lower-case-service-id: true
+
+jwt:
+  secret: MiAVzqUXy5Tfr1kVIGpPMiAVzqUXy5Tfr1kVIGpP
 
 server:
   port: 8765
