--- a/Authenticator/src/main/resources/application.yml
+++ b/Authenticator/src/main/resources/application.yml
@@ -7,12 +7,12 @@ spring:
     password: postgres
 
 server:
-  port: 0
+  port: 8081
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
 jwt:
   secret: MiAVzqUXy5Tfr1kVIGpPMiAVzqUXy5Tfr1kVIGpP
