--- a/Notificator/src/main/resources/application.yml
+++ b/Notificator/src/main/resources/application.yml
@@ -23,12 +23,12 @@ spring:
 
 
 server:
-  port: 8080
+  port: 8083
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
 logging:
   pattern:
