--- a/Notificator/src/main/resources/application.yml
+++ b/Notificator/src/main/resources/application.yml
@@ -5,21 +5,21 @@ spring:
     url: jdbc:postgresql://localhost:5432/Notifications
     username: egor
     password: postgres
-  security:
-    oauth2:
-      client:
-        registration:
-          keycloak:
-            client-id: test-client2
-            authorization-grant-type: authorization_code
-            scope: openid
-        provider:
-          keycloak:
-            issuer-uri: http://localhost:8180/realms/test-realm
-            user-name-attribute: preferred_username
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:8180/realms/test-realm
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          keycloak:
+#            client-id: test-client2
+#            authorization-grant-type: authorization_code
+#            scope: openid
+#        provider:
+#          keycloak:
+#            issuer-uri: http://localhost:8180/realms/test-realm
+#            user-name-attribute: preferred_username
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://localhost:8180/realms/test-realm
 
 
 server:
