--- a/Notificator/src/main/resources/application.yml
+++ b/Notificator/src/main/resources/application.yml
@@ -30,6 +30,11 @@ server:
 #    service-url:
 #      defaultZone: http://localhost:8761/eureka
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui
+
+
 logging:
   pattern:
     console: "%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n"
