--- a/Notificator/pom.xml
+++ b/Notificator/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot </groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-security</artifactId>-->
