--- a/Notificator/src/main/resources/application.yml
+++ b/Notificator/src/main/resources/application.yml
@@ -5,6 +5,20 @@ spring:
     url: jdbc:postgresql://localhost:5432/Notifications
     username: egor
     password: postgres
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    test-connection: true
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls.enable: true
+    sender:
+      email: noreply@ediary.com
+
 #  security:
 #    oauth2:
 #      client:
