--- a/HeadManager/pom.xml
+++ b/HeadManager/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        </dependency>
+
 
 
 <!--        <dependency>-->
