--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>Authenticator</module>
         <module>DiscoveryServer</module>
         <module>Gateway</module>
+        <module>UIService</module>
     </modules>
 
     <properties>
