--- a/HeadManager/src/main/resources/application.yml
+++ b/HeadManager/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/Management
     username: egor
     password: postgres
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8180/realms/ediary
+
 #  jpa:
 #    properties:
 #      hibernate.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
