User creating for admin initial

--- a/UIService/src/main/resources/application.yml
+++ b/UIService/src/main/resources/application.yml
@@ -19,6 +19,16 @@ spring:
               - microprofile-jwt
 
 
+
+keycloak:
+  realm: ediary
+  domain: localhost:8180
+  adminClientId: ui-client
+  adminClientSecret: NCFAsIyNDM2MxTS8IMDE7WGQ6wt2pXlV
+  urls:
+    auth: http://${keycloak.domain}
+
+
 server:
   port: 8081
 
