--- a/HeadManager/pom.xml
+++ b/HeadManager/pom.xml
@@ -84,6 +84,16 @@
 <!--            <version>0.12.5</version>-->
 <!--            <scope>runtime</scope>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
